e2e-nginx-https/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
      - name: app
        image: nstogner/hello-go-api:01a5b0b1
        ports:
        - containerPort: 8443
