e2e-nginx-https/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foo
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: https
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - foo.com
  rules:
  - host: foo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foo
            port: 
              number: 443
